--- a/Tool/src/dune
+++ b/Tool/src/dune
@@ -2,6 +2,6 @@
 
 (library
  (name src)
- (modules prettyPrint envResources envFunctions smcTableauRules strongestMonCons ast)
+ (modules prettyPrint envResources envFunctions SMCTableauRules strongestMonCons ast)
  (libraries printbox) 
 )
